fix: background overlapping agenda (#583)

--- a/less/components/program-committee.less
+++ b/less/components/program-committee.less
@@ -12,7 +12,13 @@
 */
 
 section#program-committee {
+  position: relative;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+
   .program-committee-background-short {
+    top: 0;
+    left: 0;
     background: url(/images/host-banner.jpg) no-repeat center top;
     position: absolute;
     background-size: cover;
@@ -20,10 +26,12 @@ section#program-committee {
     width: 100%;
   }
   .program-committee-background {
+    top: 0;
+    left: 0;
     background: url(/images/host-banner.jpg) no-repeat center top;
     position: absolute;
     background-size: cover;
-    height: 500px;
+    height: 100%;
     width: 100%;
   }
   .eclipsefdn-user-display-heading h2 {
